--- a/01-尚品汇第 1 天.md
+++ b/01-尚品汇第 1 天.md
@@ -561,7 +561,7 @@ Vue CLI v5.0.8
 
 ## 5. 加入 Git 版本管理
 
-
+> Git+ Gitlab
 
 **使用 git 的好处**
 
@@ -632,7 +632,7 @@ git push -u origin master
 在项目代码有了变动以后提交方式：
 
 ```shell
-git add
+git add .
 git commit -m xxx
 git push
 ```
@@ -1103,10 +1103,7 @@ git push
 
 在当前阶段，我们先暂时配置四个路由组件，分别是：
 
-1. Home      → 主页
-2. Login       → 登录
-3. Register   → 注册
-4. Search     → 搜索
+1. -
 
 
 
@@ -1285,7 +1282,8 @@ git push
       // this 指向问题
       console.log(this)
 
-      // 只要更改 originArray 的指向到 arr 身上即可，怎么更改 this 指向 call 即可
+      // 只要更改 originArray 的指向到 arr 身上即可
+      // 怎么更改 this 指向 call ?
       // call() 方法使用指定的 this 值和单独给出的一个或多个参数来调用一个函数
       originArray.call(this, value)
     }
