--- a/01-尚品汇第 1 天.md
+++ b/01-尚品汇第 1 天.md
@@ -267,6 +267,8 @@ Vue CLI v5.0.8
 ## 3. 统一代码规范
 
 > 🎯目标：对项目规范进行规范化，解决代码格式问题
+>
+> git (Vue Cli)、代码规范
 
 
 
@@ -1838,7 +1840,7 @@ export const reqCategoryList = () => request.get('/api/product/getBaseCategoryLi
 
 1.  易于维护：一个文件就是一个模块，一个方法就是一个功能，清晰明了，查找方便
 2.  便于复用： 哪里使用，哪里导入，可以在任何一个业务组件中导入需要的方法即可
-3.  语义清晰：方法名具有语义化，做到命名即注释，语义化清晰，维护方便，
+3.  语义清晰：方法名具有语义化，做到 `命名即注释`，语义化清晰，维护方便，
 4.  团队合作：分工合作
 
 
@@ -1890,6 +1892,13 @@ export default {
 
 
 **思路分析：**
+
+
+
+组件拆分思路：
+
+1. 查看组件是否是公共组件、是否需要复用、可以拆分成公共组件
+2. 页面组件：组件不需要复用，但是放到一个 .vue 文件中可能会导致 .vue 文件非常庞大，拆分方式，也是按照功能进行拆分
 
 
 
