--- a/03-尚品汇第 3 天.md
+++ b/03-尚品汇第 3 天.md
@@ -56,7 +56,7 @@
 
    
 
-3. 在入口文件中导入 `src/mock/index.js` 文件
+3. 在入口文件 `main.js` 中导入 `src/mock/index.js` 文件
 
    ```js
    // 导入 Mock 数据
@@ -263,7 +263,7 @@ Mock.mock('地址','请求方式', 'json 数据')
 
 **落地代码：**
 
-1. 在`/api/index.js` 中导入 `mockRequest.js`，并封装获取轮播图数据的接口 `api`
+1. 在`/api/home.js` 中导入 `mockRequest.js`，并封装获取轮播图数据的接口 `api`
 
    ```js
    // 导入封装的网络请求工具 request.js
@@ -298,7 +298,7 @@ Mock.mock('地址','请求方式', 'json 数据')
      // coding......
    
      // 存储轮播图数据
-     SAVE_SWIPER_LIST(state, list) {
+     saveSwiperList(state, list) {
        state.swiperList = list
      }
    }
@@ -313,7 +313,7 @@ Mock.mock('地址','请求方式', 'json 数据')
        // 判断是否获取成功
        if (result.code === 200) {
          // 若成功，联系对应的muatation去存储数据
-         context.commit('SAVE_SWIPER_LIST', result.data)
+         context.commit('saveSwiperList', result.data)
        } else {
          // 若获取不成功，提示原因
          alert(result.message)
@@ -799,7 +799,7 @@ export default {
      // coding......
    
      // 存储楼层数据
-     SAVE_FLOOR_LIST(state, value) {
+     saveFloorList(state, value) {
        state.floorList = value
      }
    }
@@ -815,7 +815,7 @@ export default {
      async getFloorList({ commit }) {
        const result = await reqFloorList()
        if (result.code === 200) {
-         commit('SAVE_FLOOR_LIST', result.data)
+         commit('saveFloorList', result.data)
        } else {
          alert(result.message)
        }
@@ -836,7 +836,7 @@ export default {
 
 3. 在组件中通过 `dispatch` 或者 `mapActions` 调用 `action` 方法
 
-   ```js
+   ```vue
    <script>
    import { mapState } from 'vuex'
    
@@ -880,9 +880,15 @@ export default {
 2. `Home`组件读取楼层数据
 
    ```js
-   ...mapState({
-     floorList:state => state.home.floorList
-   })
+   mounted() {
+     this.$store.dispatch('home/getFloorList')
+   },
+   // 利用计算属性 和 mapState 方法读取数据
+   computed: {
+     ...mapState({
+       floorList: (state) => state.home.floorList
+     })
+   }
    ```
 
 3. 后通过`props`传给`Floor`组件。
@@ -922,7 +928,7 @@ export default {
 ```vue
 <template>
   <div>
-    <div class="floor" v-for="floor in floorList" :key="floor.id">
+    <div class="floor">
       <div class="py-container">
         <div class="title clearfix">
           <h3 class="fl">{{ floor.name }}</h3>
