--- a/03-尚品汇第 3 天.md
+++ b/03-尚品汇第 3 天.md
@@ -431,7 +431,24 @@ Mock.mock('地址','请求方式', 'json 数据')
 
 ```
 完整的图片路径：协议://域名/图片路径
+// 正常情况下，后端返回的路径：
+// https://www.atguigu.com/images/banner4.jpg
 ```
+
+
+
+```js
+https://shangguig-1258431239.cos.ap-beijing.myqcloud.com/
+
+如果想成功渲染：
+1. 方案 1： 复制 ListContainer 里面的 images 放到 public 目录下
+
+2. 方案 2： 使用提供的地址：https://shangguig-1258431239.cos.ap-beijing.myqcloud.com/
+	注意：该地址直接使用就可以，在服务器下没有 images 文件夹的，这时候完成的路径是：
+    https://shangguig-1258431239.cos.ap-beijing.myqcloud.com/图片名.jpg
+```
+
+
 
 
 
