--- a/04-尚品汇第 4 天.md
+++ b/04-尚品汇第 4 天.md
@@ -1,4 +1,4 @@
-# 尚品汇第 4 天
+#  尚品汇第 4 天
 
 
 
@@ -90,10 +90,9 @@ data() {
 
 注意：
 
-1. 不能在`mounted`钩子中接收参数，因为初次展示时是组件挂载，以后传参才是组件更新。
-
- 	2. 如果数据在页面中使用了，模板改变会触发钩子函数，在 `updated` 钩子中能接收参数，否则接收不到参数
- 	3. `watch` 侦听器 ，可以❗ 其实 `vm`、`vc` 中的数据都能够被 `watch` 检测到
+1. 不能在`mounted`钩子中接收参数，因n为初次展示时是组件挂载，以后传参才是组件更新。
+  2. 如果数据在页面中使用了，模板改变会触发钩子函数，在 `updated` 钩子中能接收参数，否则接收不到参数
+  3. `watch` 侦听器 ，可以❗ 其实 `vm`、`vc` 中的数据都能够被 `watch` 检测到
 
 
 
