--- a/05-尚品汇第 5 天.md
+++ b/05-尚品汇第 5 天.md
@@ -1,4 +1,4 @@
-#  尚品汇第 5 天
+#   尚品汇第 5 天
 
 
 
@@ -104,6 +104,13 @@
 
 
 **思路分析：**
+
+
+
+点击品牌以后需要做两件事情：
+
+1. 将品牌信息展示到面包屑位置
+2. 需要使用品牌信息发起请求，获取最新的商品列表信息
 
 
 
@@ -253,6 +260,16 @@ methods: {
 
 **思路分析：**
 
+
+
+需求：
+
+1. 需要将关键字展示到面包屑位置
+2. 根据接口文档处理属性位置的参数
+3. 需要根据最新的参数重新发起请求
+
+
+
 <img src="./images/5-2 展示属性.png" style="zoom:80%; border: 1px solid #ccc" />
 
 
@@ -339,6 +356,10 @@ methods: {
 
 
 **思路分析：**
+
+
+
+
 
 
 
@@ -740,10 +761,10 @@ watch: {
 
 
 1. **<font color="red">数据总条量</font>**：总共有多少条数据 （`total`）
-3. **<font color="red">页面展示数量</font>**：每个页面展示多少数据 （`pageNum`）
-4. **<font color="red">当前页码</font>：**当前所处的分页位置，第几页（`pageSize`）
-5. **<font color="red">相邻页码展示</font>：**当前页码的前后几页 （`continues`）
-5. **<font color="green">总页数</font>**：总共有多少分页，计算公式：`数据总量 / 页面展示数量 `
+3. **<font color="red">页面展示数量</font>**：每个页面展示多少数据 （`pageSize`）
+4. **<font color="red">当前页码</font>：**当前所处的分页位置，第几页（`pageNo`）
+5. **<font color="red">相邻页码展示数量</font>：**当前页码的前后几页 （`continues`）
+5. **<font color="green">总页数</font>**：总共有多少分页，计算公式：`数据总量 / 页面展示数量 ` (`totalPage`)
 
 
 
@@ -879,6 +900,67 @@ watch: {
 
 
 
+## 11. 如何批量封装组件
+
+
+
+`components/index.js`
+
+```js
+/**
+ * components/index.js 文件的作用：用来批量注册组件
+ */
+
+// 将组件注册为全局组件
+import TypeNav from './TypeNav'
+import Pagination from './Pagination'
+
+// 将导入的组件都放置到一个数组中
+const components = [TypeNav, Pagination]
+
+// 如何创建一个插件
+const plugins = {
+  install(Vue) {
+    // 对放置组件数组进行遍历
+    // component 就是一个个导入的组件
+    components.forEach((component) => {
+      // Vue.component('SphPagination', Pagination)
+      // component.name 组件的名字
+      // component 导入的组件
+      Vue.component(component.name, component)
+    })
+  }
+}
+
+export default plugins
+
+// 之前 TypeNav 注册的时候，名字的 TypeNav
+// 但是目前批量注册后，名字使用了组件内部的别名 SphTypeNav
+// 所以需要将组件标签 TypeNav 换成 SphTypeNav
+
+// 前置知识：可以通过导入的 组件名称.name 的方式获取组件的别名
+// console.dir(TypeNav.name) // SphTypeNav
+// console.dir(Pagination.name) // SphPagination
+
+// Vue.component('TypeNav', TypeNav)
+// Vue.component('SphPagination', Pagination)
+
+```
+
+
+
+```js
+// 导入批量注册的组件
+import plugins from './components'
+// 注册导入的插件
+Vue.use(plugins)
+
+```
+
+
+
+
+
 ·
 
 ## 12.分页-计算总页数
@@ -889,7 +971,11 @@ watch: {
 
 
 
-为了一步步完成分页功能的开发，我们先伪造一些数据，计算出分页总页面
+我们通常会在使用分页组件的时候，传入`数据总数`、`页面展示数量`、`当前页码` 等配置项。然后在组件内部进行相关逻辑的操作
+
+
+
+为了一步步完成分页功能的开发，我们先伪造一些数据，计算出分页总页数
 
 
 
@@ -910,6 +996,10 @@ watch: {
 
    ```html
    <!-- 分页器 -->
+   <!-- total：数据总条数 -->
+   <!-- pageSize：每页展示多少条 -->
+   <!-- pageNo：当前在多少页 -->
+   <!-- continues：相邻展示多少数据 -->
    <Pagination :total="103" :pageSize="5" :pageNo="16" :continues="5"/>
    ```
 
@@ -955,7 +1045,7 @@ watch: {
          default: 10
        },
        // 当前页码
-       pageNum: {
+       pageNo: {
          type: Number,
          require: true,
          default: 1
@@ -992,23 +1082,13 @@ watch: {
 
 
 
-```shell
-例如：
-
-total = 103
-pageSize = 10
-pageNum = 7
-continues = 5
-
-【当前页码】 等于 【7】
-【相邻页码】 等于 【5】
-
-所以相邻页码区域应该展示  5 6 7 8 9
-```
+<img src="./images/分页正常情况.png" style="zoom:60%; border: 1px solid #ccc" />
 
 
 
-需要根据传入的伪数据，计算出连续的页数是哪几个页面，我们目前希望 相邻页码展示 是 5，那么当前页两侧左右应该为 2 ，计算公式如下：
+需要根据传入的伪数据，计算出连续的页码数字分别是多少
+
+我们目前希望 相邻页码展示数 是 5，那么当前页两侧左右应该为 2 ，计算公式如下：
 
 
 
@@ -1039,15 +1119,15 @@ continues = 5
      // 算连续页的起始页、结束页
      startEnd() {
        // 获取分页器的各种参数
-       const { total, pageSize, pageNum, continues } = this
+       const { total, pageSize, pageNo, continues } = this
    
        console.log(total, pageSize)
    
        let start = 0 // 连续页的起始位置
        let end = 0 // 连续页的结束位置
    
-       start = pageNum - (continues - 1) / 2
-       end = pageNum + (continues - 1) / 2
+       start = pageNo - (continues - 1) / 2
+       end = pageNo + (continues - 1) / 2
    
        return { start, end }
      }
@@ -1082,24 +1162,7 @@ continues = 5
 
 <font color="red">**特殊情况 1 ：传入的 continues > 算出的 totalPage**</font>
 
-
-
-```shell
-例如 1：								 	 例如 2：
-
-total = 103									total = 103
-pageSize = 30								pageSize = 30
-pageNum = 3									pageNum = 2
-continues = 5								continues = 5
-
-经过计算：totalPage = 4，					    经过计算：totalPage = 4，
-
-【当前页码 pageNum 】 等于 【3】				【当前页码 pageNum 】 等于 【2】
-【相邻页码 continues】 等于 【5】				【相邻页码 continues】 等于 【5】
-
-对于例子 1：相邻页码区域展示  1 2 3 4 5 ! 但是 5 这两个页面是不存在 ❗ ❗ ❗
-对于例子 2：相邻页码区域展示  0 1 2 3 4 ! 但是 0 这两个页面是不存在 ❗ ❗ ❗
-```
+<img src="./images/分页特殊情况1.png" style="zoom:60%; border: 1px solid #ccc" />
 
 
 
@@ -1124,7 +1187,7 @@ computed: {
   // 算连续页的起始页、结束页
   startEnd() {
     // 获取分页器的各种参数
-    const { total, pageSize, pageNum, continues, totalPage } = this
+    const { total, pageSize, pageNo, continues, totalPage } = this
 
     console.log(total, pageSize)
 
@@ -1135,8 +1198,8 @@ computed: {
       start = 1
       end = totalPage
     } else {
-      start = pageNum - (continues - 1) / 2
-      end = pageNum + (continues - 1) / 2
+      start = pageNo - (continues - 1) / 2
+      end = pageNo + (continues - 1) / 2
     }
 
     return { start, end }
@@ -1162,23 +1225,7 @@ computed: {
 
 
 
-```shell
-例如 1：
-
-total = 103
-pageSize = 5
-pageNum = 2
-continues = 5
-
-经过计算：totalPage = 21
-
-【当前页码 pageNum 】 等于【2】
-【相邻页码 continues】 等于 【5】
-
-对于例子 1：相邻页码区域展示  0 1 2 3 4  ! 但是 0 这个页面是不存在 ❗ ❗ ❗
-
-因此需要往后补一位才对，补上后的分页：1 2 3 4 5
-```
+<img src="./images/分页特殊情况2.png" style="zoom:60%; border: 1px solid #ccc" />
 
 
 
@@ -1203,7 +1250,7 @@ computed: {
   // 算连续页的起始页、结束页
   startEnd() {
     // 获取分页器的各种参数
-    const { total, pageSize, pageNum, continues, totalPage } = this
+    const { total, pageSize, pageNo, continues, totalPage } = this
 
     console.log(total, pageSize)
 
@@ -1214,8 +1261,8 @@ computed: {
       start = 1
       end = totalPage
     } else {
-      start = pageNum - (continues - 1) / 2
-      end = pageNum + (continues - 1) / 2
+      start = pageNo - (continues - 1) / 2
+      end = pageNo + (continues - 1) / 2
       
       // 判断左边是否 < 1
       if (start < 1) {
@@ -1241,7 +1288,7 @@ computed: {
 
 **思路分析：**
 
-
+<img src="./images/分页特殊情况3.png" style="zoom:60%; border: 1px solid #ccc" />
 
 <font color="red">**特殊情况 3 ：算出的结束位置 > totalPage**</font>
 
@@ -1252,12 +1299,12 @@ computed: {
 
 total = 103
 pageSize = 5
-pageNum = 20
+pageNo = 20
 continues = 5
 
 经过计算：totalPage = 21
 
-【当前页码 pageNum 】 等于【20】
+【当前页码 pageNo 】 等于【20】
 【相邻页码 totalPage】 等于 【21】
 
 对于例子：相邻页码区域展示  18 19 20 21 22 ! 但是 22 这个页面是不存在 ❗ ❗ ❗
@@ -1288,7 +1335,7 @@ computed: {
   // 算连续页的起始页、结束页
   startEnd() {
     // 获取分页器的各种参数
-    const { total, pageSize, pageNum, continues, totalPage } = this
+    const { total, pageSize, pageNo, continues, totalPage } = this
 
     console.log(total, pageSize)
 
@@ -1299,8 +1346,8 @@ computed: {
       start = 1
       end = totalPage
     } else {
-      start = pageNum - (continues - 1) / 2
-      end = pageNum + (continues - 1) / 2
+      start = pageNo - (continues - 1) / 2
+      end = pageNo + (continues - 1) / 2
       
       // 判断左边是否 < 1
       if (start < 1) {
@@ -1337,7 +1384,7 @@ computed: {
 先伪造数据，利用伪造的数据展示完整连续页：
 
 ```html
-<Pagination :total="103" :pageSize="5" :pageNum="15" :continues="5" />
+<Pagination :total="103" :pageSize="5" :pageNo="15" :continues="5" />
 ```
 
 
@@ -1350,10 +1397,14 @@ computed: {
 
 
 
- 不能直接对传入的 `continues` 进行遍历，因为  `continues` 不可靠，这里借助 **开始和结束位置** 进行处理
+ 不能直接对传入的 `continues` 进行遍历，因为  `continues` 不可靠
+
+
+
+这里借助 **开始和结束位置** 进行处理
 
 ```
-传入的当前页码是 15，完整连续页是 5
+例如：传入的当前页码是 15，完整连续页是 5
 
 开始位置是 13，结束位置是 17
 
@@ -1404,14 +1455,14 @@ start 目前是 13
 
     <!-- <button>{{ startEnd.start }}</button>
     <button>xxx</button>
-    <button class="active">{{ pageNum }}</button>
+    <button class="active">{{ pageNo }}</button>
     <button>xxx</button>
     <button>{{ startEnd.end }}</button> -->
 
     <button
       v-for="(num, index) in startEnd.end - startEnd.start + 1"
       :key="index"
-      :class="{ active: pageNum === startEnd.start + index }"
+      :class="{ active: pageNo === startEnd.start + index }"
     >
       {{ startEnd.start + index }}
     </button>
@@ -1454,7 +1505,7 @@ start 目前是 13
 <template>
   <div class="pagination">
     <!-- 当前已经是第一页了，那么【上一页】就不能点了 -->
-    <button :disabled="pageNum === 1">上一页</button>
+    <button :disabled="pageNo === 1">上一页</button>
     <button v-if="startEnd.start !== 1">1</button>
     <!-- 两个数中间，有其他数，再出现三个点 -->
     <span v-if="startEnd.start > 2">···</span>
@@ -1462,7 +1513,7 @@ start 目前是 13
     <button
       v-for="(num, index) in startEnd.end - startEnd.start + 1"
       :key="index"
-      :class="{ active: pageNum === startEnd.start + index }"
+      :class="{ active: pageNo === startEnd.start + index }"
     >
       {{ startEnd.start + index }}
     </button>
@@ -1471,7 +1522,7 @@ start 目前是 13
     <span v-if="startEnd.end < totalPage - 1">···</span>
     <button v-if="startEnd.end !== totalPage">{{ totalPage }}</button>
     <!-- 当前已经是最后一页了，那么【下一页】就不能点了 -->
-    <button :disabled="pageNum === totalPage">下一页</button>
+    <button :disabled="pageNo === totalPage">下一页</button>
 
     <span>共 {{ total }} 条</span>
   </div>
