--- a/06-尚品汇第 6 天.md
+++ b/06-尚品汇第 6 天.md
@@ -306,7 +306,9 @@
 
 
 
-需求：正常跳转路由时，滚动条直接最顶端；前进后退时，保留滚动条的位置；但是目前的情况是：正常跳转路由时，滚动条回不到最顶端。
+需求：正常跳转路由时，滚动条直接最顶端；前进后退时，保留滚动条的位置
+
+但是目前的情况是：正常跳转路由时，滚动条回不到最顶端。
 
 
 
@@ -896,7 +898,7 @@ const router = new VueRouter({
 
 
 
-点击属性 ，同一组的其他属性高亮效果需要移除，这利用了 “
+点击属性 ，同一组的其他属性高亮效果需要移除，这利用了 “排他思想”
 
 
 
@@ -1046,7 +1048,7 @@ const router = new VueRouter({
          // 输入的大于 200，就等于 200
          this.goodsNum = e.target.value = 200
        } else {
-         // 输入的如果是不合法的，需要重置为 0
+         // 输入的如果是不合法的，需要重置为 1
          this.goodsNum = e.target.value = 1
        }
      }
