--- a/05-尚品汇第 5 天.md
+++ b/05-尚品汇第 5 天.md
@@ -1493,7 +1493,44 @@ start 目前是 13
 1. 当前已经是第一页了，那么【上一页】就不能点了
 
 2. 当前已经是最后一页了，那么【下一页】就不能点了
-3. 两个数中间，有其他数，再出现三个点。
+
+3. 两个数中间，有其他数，再出现三个点
+
+   - 最简单的计算方式： `...` 两边的数字相减
+
+     - 第一个点：` 3 - 1 = 2 ` 所以 `<span v-if="startEnd.start > 2">···</span>`
+     - 最后一个点，和上面对应
+
+     - `totalPage - 1 >  startEnd.end`
+
+   - 如果依然没有思路，可以利用 start、end 一步步的推导
+
+```html
+<!-- 计算出来的 start ，1 和 3等等数字之间被 2  分隔了，就需要展示 ... -->
+<!-- PageNo = 1   1 2 3 4 5  start = 1 , end = 5 不需要三个点 -->
+<!-- PageNo = 2   1 2 3 4 5  start = 1 , end = 5 不需要三个点 -->
+<!-- PageNo = 3   1 2 3 4 5  start = 1 , end = 5 不需要三个点 -->
+<!-- PageNo = 4   2 3 4 5 6  start = 2 , end = 6，， 1 2 3 4 5 6，是连一块的 不需要三个点，  -->
+<!-- PageNo = 5   3 4 5 6 7  start = 3 , end = 7 需要三个点-->
+<!-- ⭐ 注意：start ⭐ 两个数字(1, 3)被其他数字(2)分隔的时候，需要展示 3 个点 -->
+
+<span v-if="startEnd.start > 2">···</span>
+```
+
+```html
+<!-- 第一个 ... 是 start > 2 -->
+<!-- 这下面 ... 需要是 end - 1 -->
+<!-- PageNo = 21  17 18 19 20 21  start = 17 , end = 21 不需要三个点 -->
+<!-- PageNo = 20  17 18 19 20 21  start = 17 , end = 21 不需要三个点 -->
+<!-- PageNo = 19  17 18 19 20 21  start = 17 , end = 21 不需要三个点 -->
+<!-- PageNo = 18  16 17 18 19 20  start = 16 , end = 20, 16 17 18 19 20 21 是连一块的 不需要三个点 -->
+<!-- PageNo = 17  15 16 17 18 19  start = 15 , end = 19 需要三个点 -->
+<!-- ⭐ 注意：end ⭐ 两个数字(19 21)被其他数字(20)分隔的时候，需要展示 3 个点 -->
+
+<span v-if="totalPage - 1 > startEnd.end">···</span>
+```
+
+
 
 **实现步骤：**
 
@@ -1614,7 +1651,7 @@ start 目前是 13
    <template>
      <div class="pagination">
        <!-- 当前已经是第一页了，那么【上一页】就不能点了 -->
-       <button @click="changePageNum(pageNum - 1)" :disabled="pageNum === 1">上一页</button>
+       <button @click="changePageNum(pageNo - 1)" :disabled="pageNo === 1">上一页</button>
        <button @click="changePageNum(1)" v-if="startEnd.start !== 1">1</button>
        <!-- 两个数中间，有其他数，再出现三个点 -->
        <span v-if="startEnd.start > 2">···</span>
@@ -1622,7 +1659,7 @@ start 目前是 13
        <button
          v-for="(num, index) in startEnd.end - startEnd.start + 1"
          :key="index"
-         :class="{ active: pageNum === startEnd.start + index }"
+         :class="{ active: pageNo === startEnd.start + index }"
          @click="changePageNum(startEnd.start + index)"
        >
          {{ startEnd.start + index }}
@@ -1632,7 +1669,7 @@ start 目前是 13
        <span v-if="startEnd.end < totalPage - 1">···</span>
        <button v-if="startEnd.end !== totalPage" @click="changePageNum(totalPage)">{{ totalPage }}</button>
        <!-- 当前已经是最后一页了，那么【下一页】就不能点了 -->
-       <button :disabled="pageNum === totalPage" @click="changePageNum(pageNum + 1)">下一页</button>
+       <button :disabled="pageNo === totalPage" @click="changePageNum(pageNo + 1)">下一页</button>
    
        <span>共 {{ total }} 条</span>
      </div>
@@ -1653,7 +1690,7 @@ start 目前是 13
 
    
 
-2. 父组件接收数据，传递给 `searchParams` 中的 `pageNum`
+2. 父组件接收数据，传递给 `searchParams` 中的 `pageNo`
 
    ```html
    <!-- 分页器 -->
@@ -1661,20 +1698,20 @@ start 目前是 13
      <Pagination
        :total="total"
        :pageSize="searchParams.pageSize"
-       :pageNum="searchParams.pageNum"
+       :pageNum="searchParams.pageNo"
        :continues="5"
        @changePageNum="getPageNum"
      />
    </div>
-   ```
+   
 
-   ```js
    methods: {
      getPageNum(newNum) {
-       this.searchParams.pageNum = newNum
+       this.searchParams.pageNo = newNum
      }
    }
    ```
+   
 
 
 
@@ -1702,6 +1739,12 @@ start 目前是 13
 
 
 
+只能在各自的方法中进行重置为 1，不能放到 watch 中进行处理，
+
+如果放到 watch 中进行处理，每次 pageNo = 1
+
+
+
 **落地代码：**
 
 ```vue
@@ -1714,14 +1757,14 @@ export default {
   },
   methods: {
     getPageNum(newNum) {
-      this.searchParams.pageNum = newNum
+      this.searchParams.pageNo = newNum
     },
 
     // 面包屑-移除分类名
     removeCategoryName() {
       // coding....
 
-      this.searchParams.pageNum = 1
+      this.searchParams.pageNo = 1
     },
 
     // 面包屑-移除关键字
@@ -1735,28 +1778,28 @@ export default {
     removeTrademark() {
       // coding....
         
-      this.searchParams.pageNum = 1
+      this.searchParams.pageNo = 1
     },
 
     // 面包屑-清除属性名
     removeProps(index) {
       // coding....
         
-      this.searchParams.pageNum = 1
+      this.searchParams.pageNo = 1
     },
 
     // 用于接收 SearchSelector 子组件传递过来的品牌数据
     saveTrademark(trademark) {
       // coding....
         
-      this.searchParams.pageNum = 1
+      this.searchParams.pageNo = 1
     },
 
     // 用于接收 SearchSelector 子组件传递过来的属性数据
     saveAttr(attrs, attrValue) {
       // coding....
 
-      this.searchParams.pageNum = 1
+      this.searchParams.pageNo = 1
     },
 
     // 专门用于格式化每个商品属性的方法
