--- a/06-尚品汇第 6 天.md
+++ b/06-尚品汇第 6 天.md
@@ -984,12 +984,12 @@ const router = new VueRouter({
 // 用户可能输入 个位数、十位数、百位数
 // 因此正则由 3 部分组成
 
-// [1,9] 	个位数，不包含 0
+// [1-9] 	个位数，不包含 0
 // [1-9]\d 	十位数，10 ~ 99
 // 1\d{2} 	百位数，100 ~199
 // 200 		配置 200
 
-/^([1,9]|[1,9]\d|1\d{2}|200)$/
+/^([1-9]|[1-9]\d|1\d{2}|200)$/
 ```
 
 
@@ -1038,7 +1038,7 @@ const router = new VueRouter({
      // 监听商品的数量是够改变
      changeGoodsNum(e) {
        const { value } = e.target
-       const reg = /^([1,9]|[1-9]\d|1\d{2}|200)$/
+       const reg = /^([1-9]|[1-9]\d|1\d{2}|200)$/
        const res = reg.test(value)
    
        if (res) {
