--- a/07-尚品汇第 7 天.md
+++ b/07-尚品汇第 7 天.md
@@ -78,9 +78,13 @@
 
 **思路分析：**
 
-<img src="./images/7-1 加入购物车.png" style="zoom:80%;" />
+
 
 添加购物车成功界面，要展示商品信息，所以需要提前收集好当前商品信息。
+
+
+
+<img src="./images/7-1 加入购物车.png" style="zoom:80%;" />
 
 
 
@@ -159,7 +163,7 @@ methods: {
 3. 去`src/router/route.js`中配置规则
 
    ```js
-   import AddCartSuccess from '@/pages/AddCartSuccess'
+   import AddCartSuccess from '@/views/AddCartSuccess'
    
    {
      path:'/addcart_success',    
@@ -562,7 +566,7 @@ request.interceptors.request.use(config => {
    
        localStorage.setItem('userTempId', newUserTempId)
    
-       return uuidv4
+       return newUserTempId
      }
    }
    
@@ -621,14 +625,21 @@ request.interceptors.request.use(config => {
 1. 在 `getCartList` 方法中接收数据，赋值给 `data` 中的 `cartInfoList`
 
    ```js
-   methods: {
-     // 获取购物车列表数据
-     async getCartList() {
-       const res = await reqCartList()
-       if (res.code === 200) {
-         this.cartInfoList = res.data[0].cartInfoList
-       } else {
-         alert(res.message)
+   export default {
+     data() {
+       return {
+         cartInfoList: []
+       }
+     },
+     methods: {
+       // 获取购物车列表数据
+       async getCartList() {
+         const res = await reqCartList()
+         if (res.code === 200) {
+           this.cartInfoList = res.data[0].cartInfoList
+         } else {
+           alert(res.message)
+         }
        }
      }
    }
@@ -778,8 +789,6 @@ request.interceptors.request.use(config => {
 
 
 当页面上所有的商品都勾选后，需要将全选区域的按钮也进行选中。
-
-
 
 基于已有的状态产生新的状态，利用计算属性。
 
@@ -1320,7 +1329,8 @@ async getCartList() {
 
 
 
-1. 在 `handleChangeSkuNum` 中完善逻辑
+1. 给输入框绑定`handleChangeSkuNum` 事件
+2. 在 `handleChangeSkuNum` 中完善逻辑
 
 
 
@@ -1334,7 +1344,7 @@ methods: {
 
     // 获取当前用户最新输入的值
     const { value } = e.target
-    const reg = /^([1,9]|[1-9]\d|1\d{2}|200)$/
+    const reg = /^([1-9]|[1-9]\d|1\d{2}|200)$/
 
     // 验证用户输入的值
     if (reg.test(value)) {
@@ -1342,6 +1352,7 @@ methods: {
       const disNum = value - skuNum
       // 发送请求
       const res = await reqAddGoodToCart(skuId, disNum)
+      
       if (res.code === 200) {
         good.skuNum = value * 1
       } else {
