--- a/08-尚品汇第 8 天.md
+++ b/08-尚品汇第 8 天.md
@@ -21,6 +21,28 @@ Element 一套为开发者、设计师和产品经理准备的基于 Vue 2.0 的
 
 
 
+其他常见的组件库：
+
+
+
+腾讯系：https://tdesign.tencent.com/ 最近一段时间出来的
+
+
+
+1. 基于 Vue 的 PC 桌面端
+
+   - iview：http://iview.talkingdata.com/#/
+   - Ant Design of Vue：http://antdv.cdqianyun.com/docs/vue/introduce-cn/
+   - amaze UI：http://amazeui.shopxo.net/ (不是基于 Vue 的)
+
+   
+
+2. 基于 Vue 的 Mobile 移动端
+
+   - Vant：https://vant-contrib.gitee.io/vant/v2/#/zh-CN/
+   - nutui：https://nutui.jd.com/#/
+   - Mui：https://dev.dcloud.net.cn/mui/util/ (不是基于 Vue 的)
+
 
 
 
