--- a/08-尚品汇第 8 天.md
+++ b/08-尚品汇第 8 天.md
@@ -165,7 +165,11 @@ Element 默认加载的方式，会加载项目中所有的组件，这样会造
 
 
 
-`Element` 给提示组件，都增加了全局的方法，可以在 `plugins/element.js` 文件中导入对应的提示组件，然后按照以下方法配置到 `Vue` 的原型上，即可将提示组件当成方法来进行调用
+[按需引入的方式](https://element.eleme.cn/#/zh-CN/component/quickstart#an-xu-yin-ru)
+
+
+
+`Element` 给提示组件，都增加了全局的方法，如果是按需引入的，需要自己手动添加，可以在 `plugins/element.js` 文件中导入对应的提示组件，然后按照以下方法配置到 `Vue` 的原型上，即可将提示组件当成方法来进行调用
 
 ```js
 Vue.prototype.$loading = Loading.service;
