--- a/08-尚品汇第 8 天.md
+++ b/08-尚品汇第 8 天.md
@@ -612,13 +612,51 @@ export default {
 
 
 
-1. 只有登录是成功的，服务器才会为该用户生成一个`token`。
+**思路分析：**
 
-2. `token`是用户的真正标识，根据`token`，可以去服务器那查询到该用户的所有信息。
+
+
+什么是 `Token`
+
+​         `Token` 是服务端(后端程序员)生成的一串字符串，用作客户端(前端程序员)发起请求的一个令牌(当前用户的一个唯一标识)，当第一次登录成功后，服务器生成一个 `Token` 便将此 `Token` 返回给客户端，客户端在接收到令牌以后，会使用某种方式(例如：本地存储)将令牌保存到本地。以后客户端发起请求，只需要在请求头上带上这个 `Token` 即可，无需再次带上用户名和密码
+
+
+
+`Token` 的具体流程如下：
+
+1. 客户端向服务器发起登录请求，服务端验证用户名与密码
+2. 验证成功后，服务端会签发一个 `Token`，并将 `Token` 发送到客户端
+3. 客户端收到 `token` 以后，将其存储起来，比如放在 `localStorage` 、`sessionStorage` 中
+4. 客户端每次向服务端请求资源的时候需要带着服务端签发的 `Token`，服务端收到请求，然后去验证客户端请求里面带着的 `Token` ，如果验证成功，就向客户端返回请求的数据
+
+ 
+
+<img src="./images/Token.png" style="zoom:50%; border: 1px solid #ccc" />
+
+
+
+明确以下知识点：
+
+
+
+1. 只有登录是成功的，服务器才会为该用户生成一个`token`
+
+   
+
+2. `token `是用户的真正标识，根据`token`，可以去服务器那查询到该用户的所有信息
+
+   - `userTempId` 只是临时的唯一标识，只是用户没有登录的时候，暂时记录用户的行为
+   - 如果想获取用户信息、结算、支付 等等等，需要使用用户的真正标识 `Token`
+
+   
 
 3. 浏览器端需要保存一份`token`，而且无论存在哪里，但推荐 —— `localStorage`中。
 
-   > 为什么？ —— 为了做自动登录（理解：重开浏览器后，依然是登录的状态）
+   - 用户希望浏览器关掉后打开，不需要频繁的去登录
+   - 用户有可能跨浏览器页 进行方法
+   - 为了每次请求的时候， `Token` 都存在
+
+   
 
 4. <span style="color:red">我们的服务器在用户登录成功后，会返回给我们：用户昵称、用户真实姓名、`token`，我们只存`token`。</span>
 
@@ -628,9 +666,15 @@ export default {
 
 5. 若不允许多端登录，则服务器要在用户登录后，把之前的`token`销毁，再生成一个新的`token`。
 
-   > 这个得看具体需求，目前我们的尚品汇服务器允许多端登录。
+   > 假设有两台电脑
+   >
+   > a 登录了 又想在 b 进行登录，注意如果项目不允许进行多端登录，b 登录后，a 设备会给你挤掉
+   >
+   > 不允许多端登录，这个得看具体需求，目前我们的尚品汇服务器允许多端登录。
 
 6. `token`不是永久有效的，一旦到了过期时间，服务器就自动销毁该`token`了。
+
+   - 后端决定 `Token` 过期时间
 
 7. 若用户主动触发退出登录，那么服务器就会销毁该用户的`token`。
 
@@ -804,7 +848,11 @@ export default {
    
    const getters = {}
    
-   const mutations = {}
+   const mutations = {
+     saveUserInfo (state, userInfo) {
+       state.userInfo = userInfo
+     }
+   }
    
    const actions = {
      async getUserInfo({ commit }) {
@@ -812,7 +860,7 @@ export default {
        const res = await reqUserInfo()
        // 判断是否获取成功
        if (res.code === 200) {
-         commit('SAVE_USER_INFO', res.data)
+         commit('saveUserInfo', res.data)
        } else {
          Message.warning(res.message)
        }
@@ -884,8 +932,6 @@ export default {
 
 
 
-
-
 如何解决刷新页面数据丢失的问题呢？
 
 
@@ -900,11 +946,11 @@ export default {
    >
    > ​	手机端：对用户信息进行了更改
    >
-   > ​	PC    端：刷新页面、重开浏览器后
+   > ​	PC    端：刷新页面、重开浏览器后，会先走本地存储的数据
    >
    > 
    >
-   > ​	 这时候存储到本地的用户信息是无效的，还得通过`token` 重新请求用户信息。这时候就出现了下面的问题
+   > 这时候存储到本地的用户信息是无效的，还得通过`token` 重新请求用户信息。这时候就出现了下面的问题
 
    
 
@@ -942,309 +988,6 @@ export default {
    >
    > 1. `token`存入`localStorage`，根据`token`获取的用户信息存入`vuex`
    > 2. 每次刷新页面、重开浏览器时，靠`导航守卫`去维护用户信息。
-
-
-
-
-
-
-
-
-
-## 13. 导航守卫
-
-
-
-### 13.1 导航守卫的概念
-
-
-
-**思路分析：**
-
-
-
-1. 什么是导航守卫
-
-   在进入路由或者离开路由的时候，利用 VueRouter 提供的钩子函数，对进入和离开的状态进行监听，从而执行追加特殊逻辑（路由鉴权、获取用户信息等）
-
-   
-
-2. 导航守卫的分类：
-
-   
-
-   - <strong style="color:red">全局守卫（很常用）====> 楼下的保安大爷</strong >
-   - 路由独享守卫 =========> 尚硅谷楼层的值班老师
-   - 组件内守卫 ===========> 班级里的老师
-
-   
-
-3. 我们的项目为什么使用导航守卫？
-
-   - 每次路由跳转、刷新页面时，追加特殊逻辑，例如：路由鉴权、获取用户信息等
-
-   - 对某些敏感路由做出访问限制。
-
-   
-
-
-
-### 13.2 导航守卫知识点
-
-
-
-**思路分析：**
-
-
-
-1. <strong style="color:red">全局守卫(很常用)</strong >
-
-   ```js
-   const router = new VueRouter({ ... })
-   
-   // to 去哪里
-   // from 从哪来
-   // next 去哪里
-   router.beforeEach((to, from, next) => {
-     // ...
-   })
-   
-   router.afterEach((to, from) => {
-     // ...
-   })
-   ```
-
-   
-
-2. 路由独享守卫
-
-   ```js
-   const router = new VueRouter({
-     routes: [
-       {
-         path: '/foo',
-         component: Foo,
-         beforeEnter: (to, from, next) => {
-           // ...
-         }
-       }
-     ]
-   })
-   ```
-
-   
-
-3. 组件内守卫
-
-   ```js
-   const Foo = {
-     template: `...`,
-     beforeRouteEnter(to, from, next) {
-       // 在渲染该组件的对应路由被 confirm 前调用
-       // 不！能！获取组件实例 `this`
-       // 因为当守卫执行前，组件实例还没被创建
-     },
-     beforeRouteUpdate(to, from, next) {
-       // 在当前路由改变，但是该组件被复用时调用
-       // 举例来说，对于一个带有动态参数的路径 /foo/:id，在 /foo/1 和 /foo/2 之间跳转的时候，
-       // 由于会渲染同样的 Foo 组件，因此组件实例会被复用。而这个钩子就会在这个情况下被调用。
-       // 可以访问组件实例 `this`
-     },
-     beforeRouteLeave(to, from, next) {
-       // 导航离开该组件的对应路由时调用
-       // 可以访问组件实例 `this`
-     }
-   }
-   ```
-
-
-
-> 🎯  注意：**`导航守卫一定要有出口！`**
->
-> 
->
-> 1. 出口，可以理解为放行，是否允许跳转进某个路由
-> 2. 通过 `next()` 进行放行
->    - next()  // 钩子执行完了，可以进入下一个路由
->    - next(false)  // 中断当前路由跳转行为
->    - next('/') 、next({ path: '/' }) // 根据路由跳转条件来进入特定的路由，进入一个新的导航
->    - next(error)  // 中断路由，错误会被传递给 router.onError() 注册过的回调中
-
-
-
-**落地代码：**
-
-```js
-import Vue from 'vue'
-import VueRouter from 'vue-router'
-
-// 导入组件
-import VDashboard from '@/views/Dashboard'
-import Layout from '@/views/Layout'
-import VMarket from '@/views/Market'
-import VBicenter from '@/views/Bicenter'
-import VSetting from '@/views/Setting'
-
-Vue.use(VueRouter)
-
-// 路由规则配置
-const routes = [
-    // ......
-]
-
-const router = new VueRouter({
-  routes
-})
-
-// 全局导航守卫
-// router.beforeEach((to, from, next) => {
-//   next() // 可以
-// })
-
-// router.beforeEach((to, from, next) => {
-//   next('/') // 不能直接写一个路径，会造成死循环
-// })
-
-// router.beforeEach((to, from, next) => {
-//   if (to.path === '/market') {
-//     next(false) // 中断当前路由跳转行为
-//   } else {
-//     next()
-//   }
-// })
-
-router.beforeEach((to, from, next) => {
-  if (to.path === '/market') {
-    next(new Error('这是一个错误')) // 中断路由，错误会被传递给 router.onError() 注册过的回调中
-  } else {
-    next()
-  }
-})
-
-router.onError((err) => {
-  console.log(err)
-})
-
-export default router
-
-```
-
-
-
-
-
-
-
-### 13.3 导航守卫小案例
-
-
-
-**思路分析：**
-
-
-
-如果是 vip，可以访问任意路由
-
-如果不是 vip，只允许访问 dashborad 路由
-
-
-
-**落地代码：**
-
-```js
-import Vue from 'vue'
-import VueRouter from 'vue-router'
-
-// 导入组件
-import VDashboard from '@/views/Dashboard'
-import Layout from '@/views/Layout'
-import VMarket from '@/views/Market'
-import VBicenter from '@/views/Bicenter'
-import VSetting from '@/views/Setting'
-
-Vue.use(VueRouter)
-
-// 路由规则配置
-const routes = [
-  {
-    path: '/',
-    redirect: '/dashboard'
-  },
-
-  {
-    path: '/dashboard',
-    component: Layout,
-    children: [
-      {
-        path: '',
-        component: VDashboard
-      }
-    ]
-  },
-
-  {
-    path: '/market',
-    component: Layout,
-    children: [
-      {
-        path: '',
-        component: VMarket
-      }
-    ]
-  },
-  {
-    path: '/bicenter',
-    component: Layout,
-    children: [
-      {
-        path: '',
-        component: VBicenter
-      }
-    ]
-  },
-  {
-    path: '/setting',
-    component: Layout,
-    children: [
-      {
-        path: '',
-        component: VSetting
-      }
-    ]
-  }
-]
-
-const router = new VueRouter({
-  routes
-})
-
-// 用于标识是否为 vip
-const isVIP = true
-
-// 设计一个鉴权名单
-const authPath = ['/market', '/bicenter', '/setting']
-
-// 全局导航守卫
-router.beforeEach((to, from, next) => {
-  console.log(to)
-  if (isVIP) {
-    // 如果是 vip ，可以访问任务路由
-    next()
-  } else {
-    if (authPath.includes(to.path)) {
-      alert('请充值会员')
-      next('/')
-    } else {
-      next()
-    }
-  }
-})
-
-export default router
-
-```
-
-
 
 
 
